<resources>
    <string name="app_name">A Cup of Bond</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="log_in_with_phone_number">Log in with phone number</string>
    <string name="trouble_signin">Trouble logging in?</string>
    <string name="askAccount">Don\'t have an account?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="sign_up2">Sign Up</string>
    <string name="password">Password</string>
    <string name="insertEmail">Insert your email address…</string>
    <string name="insertPassword">Insert your password…</string>
    <string name="cupsLogo">A Cup of Bond\'s Logo</string>
    <string name="sign_in_option_label">Or try with other</string>
    <string name="recovery_paragraph">Changed your phone number, forgot your account password or lost access to your Facebook Account? We can help you login with your email.</string>
    <string name="recovery_mail">Send help to email</string>
    <string name="signup_phone">Sign up with phone number</string>
    <string name="signup_google">Sign up with Google</string>
    <string name="signup_facebook">Sign up with Facebook</string>
    <string name="next">Next</string>
    <string name="app_version">Version 1.0</string>
    <string name="email_address">Email Address</string>
    <string name="dont_have">dont have an account ?</string>
    <string name="name">insert your name</string>
    <string name="warn_name">This is how it will appear in A Cup of Bond</string>
    <string name="warn_birthday">Your age will be public</string>
    <string name="warn_gender">Your gender will be public</string>
    <string name="persona">Let everyone know what you are look a like by adding it to your profile</string>
    <string name="accountrecovery">Changed your phone number, forgot your account password or lost access to your Facebook Account? We can help you login with your email.</string>
    <string name="back_symbol"><![CDATA[<]]></string>
    <string name="next_symbol"><![CDATA[>>]]></string>
    <string name="my_birthday_is">My Birthday is ...</string>
    <string name="year">year</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="send_help">Send help to email</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="i_am_a">I am a ...</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="my_name_is">My name is ...</string>
    <string name="persona_jam">PERSONA JAM</string>
    <string name="enfj">ENFJ</string>
    <string name="entp">ENTP</string>
    <string name="istp">ISTP</string>
    <string name="entj">ENTJ</string>
    <string name="estj">ESTJ</string>
    <string name="intj">INTJ</string>
    <string name="isfj">ISFJ</string>
    <string name="enfp">ENFP</string>
    <string name="esfj">ESFJ</string>
    <string name="estp">ESTP</string>
    <string name="infp">INFP</string>
    <string name="isfp">ISFP</string>
    <string name="infj">INFJ</string>
    <string name="intp">INTP</string>
    <string name="istj">ISTJ</string>
    <string name="esfp">ESFP</string>
    <string name="a_cup_of_bond_logo">A Cup of Bond logo</string>
    <string name="phonebook">phonebook</string>
    <string name="next_symbol2"><![CDATA[>]]></string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="about_me_hint">I am a procrastinator ...</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">phone number</string>
    <string name="change">change?</string>
    <string name="about_me">about me</string>
    <string name="gender">gender</string>
    <string name="my_persona_jam">my persona jam</string>
    <string name="your_mbti_type">Your MBTI type</string>
    <string name="phone_number_sample">085156266929</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="max_distance">max. distance</string>
    <string name="distance_sample">10 Km</string>
    <string name="kilometers">kilometers</string>
    <string name="age_range">age range</string>
    <string name="their_persona_jam">their persona jam</string>
    <string name="mbti_type">MBTI type</string>
    <string name="sign_out">sign out</string>
    <string name="profile_name">Raisa Andriana, 20 y.o.</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="name1">June Karimun</string>
    <string name="name2">Fahmi Abdillah</string>
    <string name="chatgadung1">Kak, masih beli petis?</string>
    <string name="chatgadung2">Haha iya.. Bosen banget pandemi</string>

</resources>