<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".EditProfileActivity">

    <View
        android:id="@+id/view"
        android:layout_width="720dp"
        android:layout_height="550dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop ="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle2" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-70dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway"
        android:textSize="28sp"
        android:text="@string/back_symbol"
        android:background="@drawable/text_input_box"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/text_input_box"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|start"
        android:hint="@string/my_name_is"
        android:padding="13dp"
        android:textSize="16sp"
        android:textColorHint="@color/grey"
        android:autofillHints="@string/name"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="290dp"
        android:fontFamily="@font/raleway"
        android:text="@string/change"
        android:textColor="@color/yellow"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/about_me"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:layout_marginTop="175dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/text_input_box"
        android:fontFamily="@font/roboto"
        android:gravity="start"
        android:hint="@string/about_me_hint"
        android:padding="13dp"
        android:textSize="16sp"
        android:autofillHints="about me"
        android:textColorHint="@color/grey"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="290dp"
        android:fontFamily="@font/raleway"
        android:text="@string/change"
        android:textColor="@color/yellow"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="285dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/roboto"
        android:padding="13dp"
        android:textSize="16sp"
        android:background="@drawable/text_input_box">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/indicator_selected"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/man" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/indicator_selected"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/woman" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/indicator_selected"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/prefer_not_to_say" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/my_persona_jam"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:layout_marginTop="475dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/text_input_box"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:text="@string/intj"
        android:padding="13dp"
        android:textSize="16sp"
        android:hint="@string/your_mbti_type"
        android:textColor="@color/white"
        android:autofillHints="MBTI type"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginStart="290dp"
        android:fontFamily="@font/raleway"
        android:text="@string/change"
        android:textColor="@color/yellow"
        android:textSize="15sp" />

</RelativeLayout>