<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_gravity="top"
    android:gravity="center"
    android:background="@drawable/sign_in"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:fontFamily="@font/robotocond"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/illustrationIn"
        android:layout_width="121dp"
        android:layout_height="111dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/app_name"
        tools:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="60dp"
        android:paddingRight="60dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:fontFamily="@font/robotocond"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/inEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints=""
            android:fontFamily="@font/robotocond"
            android:hint="@string/insertEmail"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:fontFamily="@font/robotocond"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/inPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:autofillHints=""
            android:fontFamily="@font/robotocond"
            android:hint="@string/insertPassword"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/inOptionsLabel"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:text="@string/sign_in_option_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="9sp" />

    <Button
        android:id="@+id/inGoogle"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/log_in_with_google" />

    <Button
        android:id="@+id/inFacebook"
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/log_in_with_facebook" />

    <Button
        android:id="@+id/inNumber"
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:textColor="@color/white"

        android:background="@drawable/rounded_corners"
        android:text="@string/log_in_with_phone_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/askAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/askAccount"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/linkSignUp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FF0000" />
    </LinearLayout>

    <Button
        android:id="@+id/inTrouble"
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_corners"
        android:text="@string/trouble_signin" />
</LinearLayout>