<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#582349"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="132dp"
        android:src="@drawable/logonotext"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@drawable/logonotext" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="65dp"
        android:fontFamily="@font/raleway"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/inEmailAddress"
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/text_input_box"
        android:fontFamily="@font/raleway"
        android:hint="@string/insertEmail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="65dp"
        android:fontFamily="@font/raleway"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailLabel"
        app:layout_constraintTop_toBottomOf="@+id/inEmailAddress" />

    <EditText
        android:id="@+id/inPassword"
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/text_input_box"
        android:fontFamily="@font/raleway"
        android:hint="@string/insertPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/inEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_accent"
        android:fontFamily="@font/raleway_bold"
        android:textAlignment="center"
        android:padding="8dp"
        android:textSize="14sp"
        android:text="Sign Up"
        android:textColor="@color/white" />

    <View
        android:id="@+id/line1"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:background="#ffffff" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="-10dp"
        android:text="@string/sign_in_option_label"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <View
        android:id="@+id/line2"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="260dp"
        android:layout_marginTop="-32dp"
        android:layout_marginEnd="30dp"
        android:background="#ffffff" />

    <Button
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="@drawable/text_input_box"
        android:text="@string/log_in_with_google"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/raleway_semibold"
        android:paddingStart="75dp"
        android:paddingTop="9dp" />

    <ImageView
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/google"
        android:layout_marginTop="-37dp"
        android:layout_marginStart="87dp" />

    <Button
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:background="@drawable/text_input_box"
        android:text="@string/log_in_with_facebook"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/raleway_semibold"
        android:paddingStart="75dp"
        android:paddingTop="9dp" />

    <ImageView
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/facebook"
        android:layout_marginTop="-37dp"
        android:layout_marginStart="87dp" />

    <Button
        android:layout_width="291dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="21dp"
        android:background="@drawable/text_input_box"
        android:text="@string/log_in_with_phone_number"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/raleway_semibold"
        android:paddingStart="75dp"
        android:paddingTop="9dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/phonenumber"
        android:layout_marginTop="-37dp"
        android:layout_marginStart="85dp" />


</LinearLayout>